# HR0011SB20254XL-01-ALIAS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  package_manifest.json  package_metadata.json
.github/workflows/: ci.yml
bindings/: Cargo.toml
bindings/include/: rt_vlas.h
bindings/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  logger.rs  model.rs  monitor.rs  profile.rs
core/tests/: profile_tests.rs
docs/: DATA_PROVENANCE.md  README.md  api.md  architecture.md
evidence/: README.md  scorecard_summary.json  scorecard_summary.md
evidence/scenario_01_nominal_response_leg/: proof_log.txt  summary.json  timeline.json  trust_scorecard.json
evidence/scenario_02_hazard_compression/: input_log.jsonl  proof_log.txt  summary.json  timeline.json  trust_scorecard.json
evidence/scenario_03_unrecoverable_emergency_path/: input_log.jsonl  proof_log.txt  summary.json  timeline.json  trust_scorecard.json
proposal/: 00_Submission_Index.md  01_Executive_Summary.md  02_Technical_Volume.md  03_Quad_Chart.md  04_Reviewer_Guide.md  05_Claim_Artifact_Matrix.md  06_Phase_I_Work_Plan.md  07_Risk_Register.md  09_Solicitation_Alignment.md  10_Submission_Checklist.md  11_Required_Inputs.md
scenarios/: manifest.json  scenario_01_nominal_response_leg.jsonl
scripts/: prepare_package.sh  run_scenarios.sh  summarize_evidence.py
tooling/eval/: Cargo.toml
tooling/eval/src/: main.rs
tooling/replay/: Cargo.toml
tooling/replay/src/: main.rs
tooling/viewer/: index.html
