[workspace]
members = [
  "core",
  "bindings",
  "tooling/replay",
  "tooling/eval",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["RTVLAS contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
